<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".panels.household.CreateHouseholdActivity">

    <EditText
        android:id="@+id/editTextHouseholdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/household_creation_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/latitude_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHouseholdName" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/longitude_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLatitude" />

    <Button
        android:id="@+id/submitHouseholdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitHouseholdToFirestore"
        android:text="@string/add_household"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLongitude"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/ScanQRCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToQRScan"
        android:text="@string/scanQRButton"
        app:layout_constraintBottom_toTopOf="@+id/editTextHouseholdName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>