...
    <string name="add_text">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="event_editing_title">Edit event</string>
    <string name="confirm">Confirm</string>

    <!-- Login -->
    <string name="tag_login_activity" translatable="false">LoginActivity</string>
    <string name="tag_register_email" translatable="false">RegisterEmail</string>
    <string name="tag_login_email" translatable="false">LoginEmail</string>
    <string name="email_already_used">Email is already used.</string>
...
